v1.0.12.0 - unreleased
======================
 NEW    : Support for FLV4, VP5 and VP6 video using ffmpeg codec
 NEW	: Custom presenter now support DXVA2, and display decoder mode in Jitter test information.
 FIXED  : Incorrect colors on video when using YUV mixing and "VMR Color controls"

v1.0.11.0 - 14.Oct 2007
======================
 NEW    : Command Line Option "/dubdelay" applies a positive or negative audio delay of ???ms, if filename contains "DELAY ???ms" (internal Audio Switcher required)
 NEW    : Russian, Turkish, Czech, Spanish and Hungarian translations
 NEW    : Internal AVI splitter support AMV files (need an ffdshow update to decode)
 CHANGED: Filetype association. MPC is now recognized as a registered media player application. Filetype registration now compatible with UAC. (Vista)
 CHANGED: Matroska internal subtitles are not loaded if "auto-load subtitles" option is off
 CHANGED: Allow DirectShow to use a disabled internal source and transform filters when no other suitable filter is available
 FIXED  : Subtitle popup menu not working in French
 FIXED  : Remember file position option not working properly in playlist mode
 FIXED  : Crash when opening "Navigation" menu while playing dvd (German locale only)
 FIXED  : Memory leak with window resize
 FIXED  : Many GUI related things
 FIXED  : Crash when opening zero byte length MP3 files
 FIXED  : Crash when using "Save thumbnails" with number of row or column greater than 8 (now internally limited to 8)

v1.0.10.0 - 15.Sep 2007
======================
 CHANGED: Latest Clsid Patches (Bento4 0.9.3, faad2 2.6b, dtsdec 0.0.2, libmad 0.15.1b, zlib 1.2.3, mpeg decoder: progressive frames fix, mpeg decoder: dsutil interlaced fix v2)
 CHANGED: libpng 1.2.20
 NEW    : Command Line Option "/d3dfs" to start MPC in D3D fullscreen mode
 NEW    : Logitech LCD support (e.g., G15 keyboard)
 CHANGED: Remember File and DVD position works only when "Keep history" is active (preserve privacy issue)